# descomplicando-qdrant

./: README.md  docker-compose.yml  pyproject.toml
notebooks/: 1-exemplo_inicial.ipynb  2-embeddings.ipynb
